# UODynamapper

./: .editorconfig  .gitattributes  .gitignore  AGENT_INSTRUCTIONS.md  CODE_OVERVIEW.md  Cargo.toml  README.md  TODO.md  config.toml  rustfmt.toml
assets/: settings.toml  shader_presets.toml
assets/shaders/worldmap/: land_base.wgsl  terrain_base.wgsl
docs/: lighting and land shader.md
dynamapper/: Cargo.toml
dynamapper/assets/shaders/worldmap/: land_base.wgsl  terrain_base.wgsl
dynamapper/src/: core.rs  external_data.rs  logger.rs  main.rs  prelude.rs  settings.rs  uo_datafiles_manager.rs  util_lib.rs
dynamapper/src/core/: app_states.rs  constants.rs  controls.rs  maps.rs  render.rs  system_sets.rs  texture_cache.rs  uo_files.rs  uo_files_loader.rs
dynamapper/src/core/controls/: player_movement.rs
dynamapper/src/core/render/: overlays.rs  scene.rs  terrain_shader_ui.rs  world.rs
dynamapper/src/core/render/scene/: camera.rs  dynamic_light.rs  player.rs  world.rs
dynamapper/src/core/render/scene/world/: land.rs
dynamapper/src/core/render/scene/world/land/: diagnostics.rs  draw_chunk_mesh.rs  draw_mesh.rs  mesh_material.rs  setup_base_mesh.rs
dynamapper/src/core/render/world/: camera.rs  player.rs  scene.rs
dynamapper/src/core/render/world/scene/: draw_art_static.rs  draw_land_chunk_mesh.rs  dynamic_light.rs  land.rs  overlays.rs  terrain_chunk_mesh.rs
dynamapper/src/core/render/world/scene/land/: diagnostics.rs  draw_chunk_mesh.rs  mesh_buffer_pool.rs  mesh_material.rs
dynamapper/src/core/render/world/scene/overlays/: player_position.rs
dynamapper/src/core/texture_cache/: land.rs  terrain.rs
dynamapper/src/core/texture_cache/land/: cache.rs  texture_array.rs
dynamapper/src/core/texture_cache/terrain/: cache.rs
dynamapper/src/external_data/: settings.rs  shader_presets.rs
dynamapper/src/util_lib/: _rect.rs  array.rs  image.rs  math.rs  tracked_plugin.rs  uo_coords.rs
res/: config.toml
src/: chunk_mesh.rs  constants.rs  core.rs  logger.rs  main.rs  terrain_chunk_mesh.rs  texture_cache.rs  tile_cache.rs  util.rs  worldmap_base_mesh.rs
src/core/: camera.rs  constants.rs  player.rs  render.rs  terrain_chunk_mesh.rs  texture_cache.rs  worldmap_base_mesh.rs
src/core/render/: camera.rs  player.rs  scene.rs  world.rs
src/core/render/scene/: dynamic_light.rs
src/core/render/world/: camera.rs  player.rs  scene.rs
src/core/render/world/scene/: dynamic_light.rs  terrain_chunk_mesh.rs
src/core/texture_cache/: terrain.rs
src/core/texture_cache/terrain/: cache.rs  texarray.rs
src/texture_cache/: terrain.rs
src/util_lib/: array.rs  tracked_plugin.rs
tools/: pack_project.py  pack_project.sh
uocf/: Cargo.toml
uocf/.cargo/: config.toml
uocf/src/: errors.rs  generic_index.rs  geo.rs  lib.rs  tiledata.rs  utils.rs
uocf/src/geo/: land_texture_2d.rs  map.rs
uocf/src/utils/: color.rs  math.rs
