[workspace]
resolver = "3"
members = [
    "dynamapper",
    "uocf"
]

# Enable a small amount of optimization in debug mode for our crate.
[profile.dev]
opt-level = 0
# Incremental compilation. The project is fairly small, for now we don't need it.
incremental = true
# Additional safety checks (including arithmetic overflow).
debug-assertions = true

# Settings for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3 # Enable high optimizations (2 is not that faster in compile times than 3)
debug = false # Disable generation of debug info
# Incremental compilation. The deps are seldomly compiled, generating additional data and files to
#   allow incremental compilation is a waste.
incremental = true # false

[profile.release]
lto = true
opt-level = 3
codegen-units = 1
incremental = false
debug = false

